# adrift

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/adrift/: camera.h  window.h
src/: camera.c  main.c  window.c
